# sourdough-agent

./: .gitignore  README.md  app.py  assistant_names.py  config.py  db.py  graph.py  llm.py  pyproject.toml  requirements.txt  scraper.py  service.py  sourdough.db  state.py
.claude/: settings.local.json
.streamlit/: config.toml
data/: adjectives.txt  assistant_names.txt
engine/: agent.py  graph.py  weather.py
engine/nodes/: check_commitment.py  check_readiness.py  collect_bake_context.py  estimate_timeline.py  utils.py
engine/stages/: intake.py  readiness.py
infra/: db.py
nodes/: adjust_schedule.py  assess_readiness.py  bake_monitor.py  check_readiness.py  collect_bake_context.py  commitment.py  diagnose_issue.py  diagnostic.py  guide_bake.py  intake.py  revision.py  scheduler.py
tests/: test_weather.py
