[project]
name = "sourdough-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.0",
    "requests",
    "streamlit>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
